Fixed vertical layout-shift on scrambling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -219,6 +219,7 @@ nav ul li a.active::after {
 }
 
 .hero-section h1 {
+    max-height: 80px;
     margin-bottom: 2em;
 }
 
@@ -882,6 +883,7 @@ footer p {
   font-weight: 400;
   font-size: .9em;
 }
+
 
 .glitch::before,
 .glitch::after {
